--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <color name="Nyanza">#FFD6F6DD</color>
+        <color name="LavBlue">#FFDAC4F7</color>
+        <color name="SalmonPink">#FFF4989C</color>
+        <color name="Bisque">#FFEBD2B4</color>
+        <color name="BlizzBlue">#FFACECF7</color>
+
     </style>
 </resources>
