--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,17 +26,17 @@
         app:layout_constraintTop_toBottomOf="@+id/checkingInTextView"
         tools:layout_editor_absoluteX="4dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <Button
         android:id="@+id/addNoteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="18dp"
+        android:text="Add Post"
         android:layout_marginBottom="18dp"
+        android:textColor="@color/white"
         android:contentDescription="TODO"
-        android:src="@drawable/ic_baseline_note_add_24"
-        app:fabSize="auto"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:maxImageSize="36dp" />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
