--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,10 +31,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="18dp"
-        android:text="Add Post"
+        android:text="@string/add_post"
         android:layout_marginBottom="18dp"
         android:textColor="@color/white"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/add_post_button"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         />
