--- a/app/src/main/res/layout/entry_activity.xml
+++ b/app/src/main/res/layout/entry_activity.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
@@ -24,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="9dp"
-        android:text="10/10/2022"
+        android:text="@string/date"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,29 +47,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateTextView"
         app:thumbColor="@color/design_default_color_secondary"
-        app:trackColor="@color/design_default_color_secondary_variant" />
+        app:trackColor="@color/design_default_color_secondary_variant"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/whyFeelings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/why_string"
-        app:layout_constraintTop_toBottomOf="@+id/slider"
-        android:layout_marginTop="10dp"
         android:layout_margin="20dp"
+        android:layout_marginTop="10dp"
         android:autofillHints="@string/why_string"
-        android:inputType="textShortMessage" />
+        android:hint="@string/why_string"
+        android:inputType="textShortMessage"
+        android:minHeight="48dp"
+        android:textColorHint="#757575"
+        app:layout_constraintTop_toBottomOf="@+id/slider"
+        tools:layout_editor_absoluteX="35dp" />
 
     <Button
         android:id="@+id/entryBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/todo"
+        android:contentDescription="@string/back_button"
         android:text="@string/back"
         app:fabSize="auto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:maxImageSize="30dp" />
+        app:maxImageSize="30dp"
+        tools:ignore="RedundantDescriptionCheck" />
 
     <Button
         android:id="@+id/entryPostButton"
