--- a/app/src/main/res/layout/daily_entry_card.xml
+++ b/app/src/main/res/layout/daily_entry_card.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dailyEntryCard"
-    app:cardCornerRadius="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="7dp"
-    android:padding="10dp"
     android:elevation="8dp"
+    android:padding="10dp"
+    app:cardCornerRadius="10dp"
     app:cardMaxElevation="5dp">
 
     <LinearLayout
@@ -54,30 +53,26 @@
         </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/entryNoteScale"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="serif-monospace"
-            android:hint="@string/_7"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
+
+            <TextView
+                android:id="@+id/entryNoteScale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif-monospace"
+                android:hint="@string/_7"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
-
-
-
-
 
 
 </androidx.cardview.widget.CardView>
