--- a/app/src/main/res/layout/daily_entry_card.xml
+++ b/app/src/main/res/layout/daily_entry_card.xml
@@ -16,11 +16,11 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="342dp"
+            android:layout_width="332dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
@@ -50,7 +50,9 @@
                 android:textColorHint="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/entryNoteDate" />
+                app:layout_constraintTop_toBottomOf="@+id/entryNoteDate"
+                android:maxLines="2"
+                android:ellipsize="end"/>
 
         </LinearLayout>
 
@@ -58,7 +60,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
 
@@ -70,7 +72,7 @@
                 android:hint="@string/_7"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
-                android:textSize="20sp"
+                android:textSize="28sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
