--- a/app/src/main/res/layout/daily_entry_card.xml
+++ b/app/src/main/res/layout/daily_entry_card.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="332dp"
+            android:layout_width="272dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
@@ -44,15 +44,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:ellipsize="end"
                 android:fontFamily="serif"
                 android:hint="I got an A on my assignment"
+                android:maxLines="2"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/entryNoteDate"
-                android:maxLines="2"
-                android:ellipsize="end"/>
+                app:layout_constraintTop_toBottomOf="@+id/entryNoteDate" />
 
         </LinearLayout>
 
